# troppo

./: pyproject.toml
src/troppo/methods/: base.py
src/troppo/methods/reconstruction/: imat.py
