[project]
name = "troppo"
version = "0.1.0"
description = "Constraint-based modeling framework for the enumeration of pathway analysis concepts"
authors = [
    {name = "Jorge Ferreira", email = "jorge.ferreira@ceb.uminho.pt"},
    {name = "Vítor Vieira"}
]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.5",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "'Topic :: Software Development :: Libraries :: Python Modules"
]


[project.urls]
Homepage = "https://github.com/BioSystemsUM/troppo"
Documentation = "http://troppo-bisbi.readthedocs.io/"
Repository = "https://github.com/BioSystemsUM/troppo/"
Issues = "https://github.com/BioSystemsUM/troppo/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = "src" }
install_requires = [
    "cobamp>=0.2.1",
    "cobra>=0.24.0",
    "xlrd>=1.2.0"
]